# backend/src/routes/routes.ts
@@ -121,6 +121,24 @@ const models: TsoaRoute.Models = {
             "refreshToken": {"dataType":"string","required":true},
             "deviceInfo": {"ref":"DeviceInfoEntity","required":true},
             "cart": {"ref":"CartEntity","required":true},
+            "orders": {"dataType":"array","array":{"dataType":"refObject","ref":"OrderEntity"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "OrderEntity": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"string","required":true},
+            "createdAt": {"dataType":"datetime","required":true},
+            "updatedAt": {"dataType":"datetime","required":true},
+            "deletedAt": {"dataType":"union","subSchemas":[{"dataType":"datetime"},{"dataType":"enum","enums":[null]}],"required":true},
+            "user": {"ref":"UserEntity","required":true},
+            "status": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["pending"]},{"dataType":"enum","enums":["paid"]},{"dataType":"enum","enums":["failed"]},{"dataType":"enum","enums":["refunded"]}],"required":true},
+            "amount": {"dataType":"double","required":true},
+            "stripePaymentIntentId": {"dataType":"string"},
+            "stripeChargeId": {"dataType":"string"},
+            "itemsSnapShot": {"dataType":"any"},
         },
         "additionalProperties": false,
     },
